# UdacityProject6

./: README.md  add_marker.sh  home_service.sh  pick_objects.sh
add_markers/: CMakeLists.txt  package.xml
add_markers/src/: add_markers.cpp
add_markers/srv/: ManipMarker.srv
my_robot/: config.rviz  package.xml
my_robot/config/: base_local_planner_params.yaml  costmap_common_params.yaml  local_costmap_params.yaml
my_robot/launch/: amcl.launch  localization.launch  mapping.launch  robot_description.launch  world.launch
my_robot/map/: wohnung.pgm  wohnung.yaml
my_robot/urdf/: my_robot.gazebo  my_robot.xacro  my_robot_90.xacro
my_robot/worlds/: wohnung.world
pick_objects/: CMakeLists.txt  package.xml
pick_objects/src/: pick_objects.cpp
slam_gmapping/gmapping/launch/: slam_gmapping_pr2.launch
